# baselib

./: .gitignore  CMakeLists.txt  README.md  android.toolchain.cmake  build.sh
base/: autodetectproxy.cc  base.sln  criticalsection_unittest.cc  gtest_prod.vcxproj  gunit.h  messagequeue.h  rate_statistics.h  rtc_base.vcxproj  rtc_base_approved.vcxproj  rtc_base_approved.vcxproj.filters  rtc_task_queue.vcxproj  rtc_task_queue.vcxproj.filters  task_queue.h
src/android/jnihelper/: jni_classloader.cpp  jni_helpers.cpp  jni_onload.cpp
src/base/: rate_statistics.cc  stFail  virtualsocketserver.cc
src/system_wrappers/: field_trial_default.vcxproj  field_trial_default.vcxproj.filters  stFail  system_wrappers.vcxproj.filters
system_wrappers/: system_wrappers.sln  system_wrappers_default.vcxproj
webrtc/: README.md
webrtc/android/: JniHelper.h  helpers_android.cc  jvm_android.h
webrtc/android/jnihelper/: jni_classloader.cpp  jni_classloader.h  jni_helpers.cpp  jni_helpers.h  jni_onload.h
webrtc/base/: BUILD.gn  base.gyp  logging.h  messagequeue.cc  physicalsocketserver.cc  rtc_base.vcxproj.filters  task_queue_win.cc
webrtc/system_wrappers/: metrics_default.vcxproj  metrics_default.vcxproj.filters  system_wrappers.vcxproj
xcode/firsttest/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m  threadtest.cpp  threadtest.hpp
